--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,16 @@ remote_theme: coursweb/jk-theme
 title: Cours HTML
 description: Module de cours sur le langage HTML.
 lang: fr-FR
+chapters:
+ - title: Cours-web
+   url: https://cours-web.ch/
+ - title: HTML
+   url: https://cours-web.ch/html/
+ - title: CSS
+   url: https://cours-web.ch/html/
+ - title: JavaScript
+   url: https://cours-web.ch/javascript/
+ - title: Serveurs
+   url: https://cours-web.ch/serveurs/
+ - title: WordPress
+   url: https://cours-web.ch/wp/
