--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,13 @@ chapters:
  - title: HTML
    url: https://cours-web.ch/html/
  - title: CSS
-   url: https://cours-web.ch/html/
+   url: https://cours-web.ch/css/
  - title: JavaScript
    url: https://cours-web.ch/javascript/
- - title: Serveurs
-   url: https://cours-web.ch/serveurs/
- - title: WordPress
-   url: https://cours-web.ch/wp/
+
+   # Footer content
+# Content is split in three columns.   
+footer_col_1: <ul class="contact-list">
+  <li>Eracom, Lausanne</li>
+  <li>2017–2021</li></ul>
+footer_col_2: <ul class="social-media-list"><li><a href="https://github.com/coursweb/html">Lien Github</a></li></ul>
