--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ chapters:
    url: https://cours-web.ch/css/
  - title: JavaScript
    url: https://cours-web.ch/javascript/
+ - title: A11Y
+   url: https://cours-web.ch/a11y/
 
    # Footer content
 # Content is split in three columns.   
